--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:design:23.4.0'
     compile 'com.github.userswlwork:pull-to-refresh:1.0.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.github.Aspsine:SwipeToLoadLayout:v1.0.2'
 }
